--- a/index.html
+++ b/index.html
@@ -20,20 +20,23 @@
 
 	</body>
 
+	<script type="text/javascript" src="js/libs/underscore-min.js"></script>
+	<script type="text/javascript" src="js/libs/stats.min.js"></script>
+
 	<!--
 	Three.js 3d library
 	-->
-	<script src="js/three.min.js"></script>
+	<script src="js/libs/three.min.js"></script>
 
 	<!--
 	VRControls.js acquires positional information from connected VR devices and applies the transformations to a Three.js camera object.
 	 -->
-	<script src="js/VRControls.js"></script>
+	<script src="js/libs/VRControls.js"></script>
 
 	<!--
 	VREffect.js handles stereo camera setup and rendering.
 	-->
-	<script src="js/VREffect.js"></script>
+	<script src="js/libs/VREffect.js"></script>
 
 	<script src="js/main.js"></script>
 </html>
