Adding tween, row animation still broken

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 	Three.js 3d library
 	-->
 	<script src="js/libs/three.min.js"></script>
+	<script src="js/libs/tween.min.js"></script>
 
 	<!--
 	VRControls.js acquires positional information from connected VR devices and applies the transformations to a Three.js camera object.
